--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.6.7",
     "echarts": "^5.2.2",
     "element-plus": "^1.2.0-beta.4",
     "moment": "^2.29.1"
