--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "element-plus": "^2.3.12",
     "vue": "^3.3.4",
     "vue-meta": "^2.4.0",
