--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2b8
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2b8
 spring.datasource.username=root
 spring.datasource.password=zxcvbn123
 
